# XcodeFuckOff

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/adr/: 0001-command-runner-and-space-accounting.md  0002-gui-mixin-architecture.md  0003-native-macos-integration.md  0004-devtools-fallback.md  0005-theme-system.md
mutants/: mutmut-stats.json  pyproject.toml
mutants/tests/: conftest.py  test_cleanup_manual.py  test_cleanup_methods.py  test_cleanup_orchestration.py  test_cleanup_runtime.py  test_cleanup_stepresult.py  test_cleanup_unmount.py  test_cli.py  test_core.py  test_devtools.py  test_disks_parsing.py  test_no_subprocess_imports.py  test_processes_parsing.py  test_space_parsing.py
mutants/tests/fixtures/: df_before.txt  diskutil_apfs_list_before.txt  diskutil_info_disk11s1.txt  diskutil_info_disk7s1.txt  diskutil_list_before.txt
mutants/xcodecleaner/services/: __init__.py  cleanup.py  disks.py  processes.py  space.py
mutants/xcodecleaner/system/: __init__.py  devtools.py  sip.py
scripts/: launch_xcodecleaner.py  launch_xcodefuckoff.py
tests/: conftest.py  test_cleanup_manual.py  test_cleanup_methods.py  test_cleanup_orchestration.py  test_cleanup_runtime.py  test_cleanup_space_ok.py  test_cleanup_stepresult.py  test_cleanup_unmount.py  test_cli.py  test_core.py  test_devtools.py  test_disks_parsing.py  test_no_subprocess_imports.py  test_processes_parsing.py  test_space_parsing.py  test_themes.py
xcodecleaner/: __init__.py  __main__.py  core.py
xcodecleaner/core/: __init__.py  (+1 more)
xcodefuckoff/: __main__.py
(+43 files in other folders)
