[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xcodecleaner"
version = "0.0.1"
description = "Xcode/Simulator cleanup utilities with GUI"
requires-python = ">=3.10"
dependencies = [
  "PyQt6>=6.6",
  "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mutmut>=2.4",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["xcodecleaner*"]
exclude = ["assets*", "tests*", "scripts*"]

[tool.mutmut]
pytest_add_cli_args = ["-p", "no:capture"]
paths_to_mutate = ["xcodecleaner/services", "xcodecleaner/system"]
backup = false
